# ChangeLog for dev-perl/strictures
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/strictures/ChangeLog,v 1.3 2012/03/01 16:17:40 tove Exp $

  01 Mar 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Add missing cpan remote-id tags in metadata.xml (#406287)

  14 Jun 2011; Fabian Groffen <grobian@gentoo.org> strictures-1.2.2.ebuild:
  Marked ~x86-solaris (#369997) and ~ppc-macos

*strictures-1.2.2 (04 Jun 2011)

  04 Jun 2011; Torsten Veller <tove@gentoo.org> +strictures-1.2.2.ebuild,
  +metadata.xml:
  Initial commit for Moo
