@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/strictures
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/strictures/ChangeLog,v 1.3 2012/03/01 16:17:40 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/strictures/ChangeLog,v 1.4 2012/04/09 07:05:14 tove Exp $
+
+*strictures-1.3.1 (09 Apr 2012)
+
+  09 Apr 2012; Torsten Veller <tove@gentoo.org> +strictures-1.3.1.ebuild:
+  Version bump
 
   01 Mar 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
   Add missing cpan remote-id tags in metadata.xml (#406287)
